exports[`<UserPanel /> renders children correctly 1`] = `
<div
  className="sc-EHOje fivrWw">
  <img
    className="sc-ifAKCX cqeJgF"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat lsmgv"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with collapse option 1`] = `
<div
  className="sc-EHOje fivrWw">
  <img
    className="sc-ifAKCX cqeJgF"
    src={undefined} />
  <div
    className="sc-bxivhb goesqJ">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat lsmgv"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with default options 1`] = `
<div
  className="sc-EHOje fivrWw">
  <img
    className="sc-ifAKCX cqeJgF"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat lsmgv"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with image 1`] = `
<div
  className="sc-EHOje fivrWw">
  <img
    className="sc-ifAKCX cqeJgF"
    src="/some/path" />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat lsmgv"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with link 1`] = `
<div
  className="sc-EHOje fivrWw">
  <img
    className="sc-ifAKCX cqeJgF"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat lsmgv"
      href="/a/link">
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with name 1`] = `
<div
  className="sc-EHOje fivrWw">
  <img
    className="sc-ifAKCX cqeJgF"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy">
      My Name
    </p>
    <a
      className="sc-htpNat lsmgv"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with online status option 1`] = `
<div
  className="sc-EHOje fivrWw">
  <img
    className="sc-ifAKCX cqeJgF"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat lsmgv"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa gbfvFu" />
       Online
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with theme 1`] = `
<div
  className="sc-EHOje fivrWw">
  <img
    className="sc-ifAKCX cqeJgF"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat lsmgv"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;
